--- a/Backend/Task1/client/package.json
+++ b/Backend/Task1/client/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
